--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ p {
     color: #ffffff;
 } */
 
-.benefit-lead h3, .benefit-brand, .benefit-cost {
+.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -116,7 +116,7 @@ p {
     text-align: center;
 } */
 
-.benefit-lead img, .benefit-brand, .benefit-cost {
+.benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
