--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,9 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+/* changed to nav tag */
+
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +34,15 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+/* changed to nav tag */
+
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+/* changed to nav tag */
+
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -86,6 +92,8 @@ p {
     background-color: #2589bd;
 }
 
+/* Consolidated CSS */
+
 .benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
@@ -101,6 +109,8 @@ p {
     color: #ffffff;
 } */
 
+/* Consolidated CSS */
+
 .benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -115,6 +125,8 @@ p {
     margin-bottom: 10px;
     text-align: center;
 } */
+
+/* Consolidated CSS */
 
 .benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
@@ -133,6 +145,8 @@ p {
     margin: 10px auto;
     max-width: 150px;
 } */
+
+/* Consolidated CSS */
 
 .search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
@@ -161,6 +175,8 @@ p {
     color: #ffffff; 
 } */
 
+/* Consolidated CSS */
+
 .search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
@@ -172,6 +188,8 @@ p {
 .social-media-marketing img {
     max-height: 200px;
 } */
+
+/* consolidated CSS */
 
 .search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
     margin-bottom: 20px;
